feat: Implement comprehensive GUI improvements and bug fixes
- Added a detailed Bug Fixes Summary documenting all resolved issues related to GUI elements, including button sizes, text alignment, and theme colors.
- Fixed synchronization issues between the Dashboard and Protection tab, ensuring real-time updates and consistent status displays.
- Introduced an Exit Confirmation Dialog to prevent accidental termination of Real-Time Protection, enhancing user awareness and control.
- Proposed and documented GUI improvement recommendations based on user experience research, focusing on accessibility and cognitive load reduction.
- Summarized the implementation of GUI enhancements, including header improvements, dashboard overview, and accessibility features.
- Resolved Real-Time Protection state persistence issues, ensuring accurate status display across application restarts.
- Fixed Real-Time Protection functionality, ensuring active monitoring and threat detection.
- Completed repository restructuring for better organization and maintainability, consolidating modules and updating import paths.

--- a/packaging/flatpak/org.xanados.SearchAndDestroy.yml
+++ b/packaging/flatpak/org.xanados.SearchAndDestroy.yml
@@ -58,19 +58,19 @@ modules:
   - name: search-and-destroy
     buildsystem: simple
     build-commands:
-      - install -Dm755 flatpak/search-and-destroy.sh /app/bin/search-and-destroy
+      - install -Dm755 packaging/flatpak/search-and-destroy.sh /app/bin/search-and-destroy
       - cp -r app/ /app/lib/search-and-destroy/
-      - install -Dm644 flatpak/org.xanados.SearchAndDestroy.desktop /app/share/applications/org.xanados.SearchAndDestroy.desktop
-      - install -Dm644 flatpak/org.xanados.SearchAndDestroy.metainfo.xml /app/share/metainfo/org.xanados.SearchAndDestroy.metainfo.xml
+      - install -Dm644 packaging/flatpak/org.xanados.SearchAndDestroy.desktop /app/share/applications/org.xanados.SearchAndDestroy.desktop
+      - install -Dm644 packaging/flatpak/org.xanados.SearchAndDestroy.metainfo.xml /app/share/metainfo/org.xanados.SearchAndDestroy.metainfo.xml
       # Install icons if they exist
       - |
-        if [ -f icons/org.xanados.SearchAndDestroy.svg ]; then
-          install -Dm644 icons/org.xanados.SearchAndDestroy.svg /app/share/icons/hicolor/scalable/apps/org.xanados.SearchAndDestroy.svg
+        if [ -f packaging/icons/org.xanados.SearchAndDestroy.svg ]; then
+          install -Dm644 packaging/icons/org.xanados.SearchAndDestroy.svg /app/share/icons/hicolor/scalable/apps/org.xanados.SearchAndDestroy.svg
         fi
       - |
         for size in 16 32 48 64 128; do
-          if [ -f "icons/org.xanados.SearchAndDestroy-${size}.png" ]; then
-            install -Dm644 "icons/org.xanados.SearchAndDestroy-${size}.png" "/app/share/icons/hicolor/${size}x${size}/apps/org.xanados.SearchAndDestroy.png"
+          if [ -f "packaging/icons/org.xanados.SearchAndDestroy-${size}.png" ]; then
+            install -Dm644 "packaging/icons/org.xanados.SearchAndDestroy-${size}.png" "/app/share/icons/hicolor/${size}x${size}/apps/org.xanados.SearchAndDestroy.png"
           fi
         done
     sources:
