--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,17 @@ schedule>=1.1.0
 setuptools>=65.0.0
 inotify>=0.2.0
 
+# Advanced feature dependencies
+aiohttp>=3.8.0
+dnspython>=2.3.0
+matplotlib>=3.6.0
+pandas>=1.5.0
+numpy>=1.24.0
+jinja2>=3.1.0
+cryptography>=40.0.0
+boto3>=1.26.0
+aiofiles>=23.0.0
+
 # Development dependencies
 pylint>=3.0.0
 black>=24.0.0
