feat: implement comprehensive archive system for code preservation
- Created archive/ directory with categorized subdirectories:
  - cleanup-stubs/: Files reduced to stubs during cleanup
  - unused-components/: No longer active but potentially useful code
  - old-versions/: Previous implementations and backups
  - experimental/: Proof-of-concept and experimental features

- Added archive management scripts:
  - scripts/archive.sh: Helper to archive files with metadata
  - scripts/restore.sh: Helper to restore archived files

- Archived problematic stub files:
  - scan_dialog_stub.py: 28-line stub that broke scan functionality
  - settings_dialog_stub.py: 28-line stub that broke settings
  - Corrupted backup files from failed cleanup (renamed to .txt)

- Updated .gitignore to allow archive/ directory tracking
- Comprehensive documentation in archive/README.md

This prevents future code loss during refactoring and cleanup operations.

--- a/.gitignore
+++ b/.gitignore
@@ -149,7 +149,10 @@ demo_*.py
 build-dir/
 .flatpak-builder/
 *.flatpak
-archive/
+
+# But allow our project archive directory for code preservation
+# archive/
+!archive/
 
 # ClamAV specific
 *.clamav-db
