--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,17 @@ site/
 [Tt]humbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
+
+# Added by repository organizer
+# Python cache
+# Temporary files
+# Test files in root
+/test_*.py
+# IDE files
+.vscode/settings.json
+.vscode/launch.json
+
+# Documentation organization
+archive/deprecated-docs/
+docs/**/*.bak
+docs/**/*.tmp
