feat: Comprehensive update of Makefile and repository organization
- Modernized Makefile with enhanced functionality, organization, and user experience.
- Introduced automated repository organization system with validation and maintenance scripts.
- Added extensive documentation for Makefile targets, organization rules, and development workflows.
- Implemented security hardening measures and improved error handling across scripts.
- Established a clear directory structure and file placement rules for better maintainability.
- Enhanced development workflow with integrated quality assurance and status reporting.
- Updated versioning to 2.4.0, reflecting significant infrastructure and security improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,9 @@ $RECYCLE.BIN/
 archive/deprecated-docs/
 docs/**/*.bak
 docs/**/*.tmp
+
+# Added by repository organizer
+temp/
+tmp/
+# Testing
+# Backup files
