--- a/.gitignore
+++ b/.gitignore
@@ -233,5 +233,28 @@ docs/**/*.tmp
 # Added by repository organizer
 temp/
 tmp/
+
+# Node.js
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Build cleanup artifacts
+/test_*.py
+*.tmp
+*.temp
+
 # Backup files
