--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,20 @@ Pipfile.lock
 pdm.lock
 pipenv/
 
+# Node.js and npm
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.eslintcache
+.node_repl_history
+package-lock.json
+yarn.lock
+
+# But include tools/node/package.json for development dependencies
+!tools/node/package.json
+
 # IDE and Editor files
 .vscode/
 .idea/
