--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ psutil>=6.0.0
 schedule>=1.2.2
 setuptools>=75.0.0
 inotify>=0.2.10
+markdown>=3.4.0
 
 # Advanced feature dependencies
 aiohttp>=3.10.5
