--- a/mypy.ini
+++ b/mypy.ini
@@ -1,15 +1,1 @@
-[#] mypy configuration for xanadOS-Search_Destroy
-[mypy]
-python_version = 3.13
-ignore_missing_imports = True
-warn_unused_configs = True
-warn_redundant_casts = True
-warn_unused_ignores = True
-show_error_codes = True
-pretty = True
-
-[mypy-psutil.*]
-ignore_missing_imports = True
-
-[mypy-inotify.*]
-ignore_missing_imports = True
+config/mypy.ini
