Add VS Code file restoration prevention measures
- Added workspace settings to disable file restoration features
- Enhanced .gitignore to exclude VS Code temporary files
- Created prevention script to detect and fix file restoration issues
- This prevents VS Code from automatically restoring deleted files

--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,12 @@ config.json
 activity_logs.json
 scan_reports/
 # Build and distribution
+
+# VS Code workspace state and temporary files
+.vscode/settings.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/.ropeproject
+.vscode/extensions.json
+*.code-workspace.bak
+.history/
