Refactor documentation and scripts for improved clarity and organization
- Updated ARCHIVE_INDEX.md for better readability.
- Revised REPOSITORY_ORGANIZATION.md to enhance structure and clarity.
- Modified package.json to update Node.js engine requirement and add quick validation script.
- Adjusted GitHub Actions workflows to limit branch triggers to 'main'.
- Removed 'develop' branch references from git workflow scripts.
- Added comprehensive INDEX.md files for chat modes, instructions, and prompts.
- Created validation report templates and linked them to the validation process.
- Implemented Markdown link check and spellcheck workflows for repository maintenance.
- Migrated Copilot instructions to a dedicated guide for better accessibility.
- Enhanced usage guide for prompt files in VS Code to streamline task execution.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,25 @@
 {
+  // Workspace recommendations tailored for this repo (GitHub Flow, Markdown, YAML, scripts)
   "recommendations": [
     "github.copilot",
     "github.copilot-chat",
+    "github.vscode-github-actions",
     "yzhang.markdown-all-in-one",
     "davidanson.vscode-markdownlint",
-    "ms-vscode.vscode-json",
     "redhat.vscode-yaml",
     "esbenp.prettier-vscode",
-    "ms-vscode.test-adapter-converter",
-    "ms-vscode.extension-test-runner"
+    "eamodio.gitlens",
+    "EditorConfig.EditorConfig",
+    "timonwong.shellcheck",
+    "foxundermoon.shell-format",
+    "streetsidesoftware.code-spell-checker",
+    "bierner.markdown-mermaid"
   ],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": [
+    // Not relevant to this repo’s scope
+    "rangav.vscode-thunder-client",
+    "ms-vscode.makefile-tools",
+    "ms-vscode.extension-test-runner",
+    "ms-vscode.test-adapter-converter"
+  ]
 }
