--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [ main, develop ]
+  branches: [ main ]
   pull_request:
-    branches: [ main, develop ]
+  branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -35,29 +35,45 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
+      - name: Run Lint (markdownlint via npm script)
         run: npm run lint
         continue-on-error: true
 
-      - name: Run Prettier check
-        run: npm run format:check
+      - name: Run Prettier check (if configured)
+        run: |
+          if [ -f "package.json" ] && grep -q '"format:check"' package.json; then
+            npm run format:check
+          else
+            echo "No format:check script; skipping."
+          fi
         continue-on-error: true
 
       - name: Validate template system
         run: node .github/validation/templates/template-validation-system.js
 
-      - name: Run quality checks
+      - name: Quick validate (lint + validate)
+        run: npm run quick:validate
+
+      - name: Run quality checks (if scripts exist)
         run: |
-          if [ -f "scripts/quality/quality-check.sh" ]; then
-            chmod +x scripts/quality/quality-check.sh
-            ./scripts/quality/quality-check.sh
+          if [ -f "scripts/validation/validate-policies.sh" ]; then
+            chmod +x scripts/validation/validate-policies.sh
+            ./scripts/validation/validate-policies.sh || true
+          fi
+          if [ -f "scripts/validation/validate-agent-workflow.sh" ]; then
+            chmod +x scripts/validation/validate-agent-workflow.sh
+            ./scripts/validation/validate-agent-workflow.sh || true
+          fi
+          if [ -f "scripts/validation/validate-version-control.sh" ]; then
+            chmod +x scripts/validation/validate-version-control.sh
+            ./scripts/validation/validate-version-control.sh || true
           fi
 
       - name: Verify repository structure
         run: |
-          if [ -f "scripts/utils/verify-structure.sh" ]; then
-            chmod +x scripts/utils/verify-structure.sh
-            ./scripts/utils/verify-structure.sh
+          if [ -f "scripts/validation/verify-structure.sh" ]; then
+            chmod +x scripts/validation/verify-structure.sh
+            ./scripts/validation/verify-structure.sh
           fi
 
   security-scan:
@@ -96,18 +112,6 @@ jobs:
       - name: Run Markdown lint
         run: markdownlint "**/*.md" --ignore node_modules --ignore archive
 
-  link-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Check links in Markdown files
-        uses: gaurav-nelson/github-action-markdown-link-check@v1
-        with:
-          use-quiet-mode: 'yes'
-          use-verbose-mode: 'yes'
-          config-file: '.github/workflows/mlc_config.json'
 
   spellcheck:
     runs-on: ubuntu-latest
@@ -166,7 +170,7 @@ jobs:
   pr-comment:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
-    needs: [validation, security-scan, markdown-lint, link-check]
+    needs: [validation, security-scan, markdown-lint]
     steps:
       - name: Comment PR
         uses: actions/github-script@v7
@@ -180,8 +184,6 @@ jobs:
             ✅ Template validation completed
             ✅ Security scan completed
             ✅ Markdown lint completed
-            ✅ Link validation completed
-
             Your pull request has passed all automated checks!
 
             **Next Steps:**
