feat: add comprehensive VS Code integration with one-click setup
- Added VS Code workspace configuration with optimized settings
- Created devcontainer.json for GitHub Codespaces support
- Added quick-setup.sh script for essential files deployment
- Enhanced README with multiple setup options and buttons
- Added extension recommendations and tasks for VS Code
- Configured GitHub Copilot settings and file associations
- Added table-based setup options for better UX
- Shortened URLs for easier command-line usage

Users can now:
- Open directly in VS Code web/desktop
- Clone with VS Code integration
- Use GitHub Codespaces for cloud development
- Copy just essential files to existing projects
- Get pre-configured workspace with all extensions

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "update-readme": "node scripts/update-readme.js",
     "generate-install-links": "./scripts/generate-install-links.sh",
     "validate": "node .github/validation/templates/template-validation-system.js",
-  "test": "npm run validate",
-  "lint": "npx markdownlint **/*.md --ignore node_modules",
-  "lint:fix": "npx markdownlint **/*.md --ignore node_modules --fix",
-  "quick:validate": "npm run lint && npm run validate"
+    "test": "npm run validate",
+    "lint": "npx markdownlint **/*.md --ignore node_modules",
+    "lint:fix": "npx markdownlint **/*.md --ignore node_modules --fix",
+    "quick:validate": "npm run lint && npm run validate"
   },
   "keywords": [
     "github-copilot",
@@ -32,5 +32,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "shellcheck": "^4.1.0"
   }
 }
