feat(phase-1): add Brushes, Prompt Cards, Prompt Best Practices, chatmode schema, and validator
- docs/guides/BRUSHES.md, PROMPT-CARDS.md, PROMPT-BEST-PRACTICES.md
- .github/schemas/chatmode.schema.json for section presence
- scripts/validation/validate-chatmodes.sh wired into npm validate
- All validations and lint pass

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "update-readme": "node scripts/update-readme.js",
     "generate-install-links": "./scripts/generate-install-links.sh",
-    "validate": "node .github/validation/templates/template-validation-system.js",
+  "validate:chatmodes": "bash scripts/validation/validate-chatmodes.sh",
+  "validate": "node .github/validation/templates/template-validation-system.js && npm run validate:chatmodes",
     "test": "npm run validate",
     "lint": "npx markdownlint **/*.md --ignore node_modules",
     "lint:fix": "npx markdownlint **/*.md --ignore node_modules --fix",
