feat(phase-2): add agent runbooks, awesome playground example, and test task
- .github/runbooks/: greenfield Next.js and TS refactor runbooks
- examples/awesome-playground/: tiny app + sample test
- package.json: playground:test script

Repo validates and lint passes.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run validate",
     "lint": "npx markdownlint **/*.md --ignore node_modules",
     "lint:fix": "npx markdownlint **/*.md --ignore node_modules --fix",
-    "quick:validate": "npm run lint && npm run validate"
+  "quick:validate": "npm run lint && npm run validate",
+  "playground:test": "node examples/awesome-playground/test/greet.test.js"
   },
   "keywords": [
     "github-copilot",
