feat(examples): add MCP GitHub issues triage (offline) with test and scripts
docs: add MCP examples index under docs/guides
feat(runbooks): add incident response, monorepo ops, and SBOM/dependency hygiene runbooks
chore(package): wire mcp:triage and mcp:test scripts

- Lint and validations pass
- Example test passes; demo run prints summary

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "npx markdownlint **/*.md --ignore node_modules",
     "lint:fix": "npx markdownlint **/*.md --ignore node_modules --fix",
   "quick:validate": "npm run lint && npm run validate",
-  "playground:test": "node examples/awesome-playground/test/greet.test.js"
+  "playground:test": "node examples/awesome-playground/test/greet.test.js",
+  "mcp:triage": "node examples/mcp/github-issues-triage/run.js",
+  "mcp:test": "node examples/mcp/github-issues-triage/test/triage.test.js"
   },
   "keywords": [
     "github-copilot",
