--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -2,7 +2,8 @@
   "ignorePatterns": [
     { "pattern": "^https://github.com/.+/(compare|commit|pull)/" },
     { "pattern": "^https://img.shields.io/" },
-    { "pattern": "^mailto:" }
+  { "pattern": "^mailto:" },
+  { "pattern": "^vscode://" }
   ],
   "httpHeaders": [
     { "urls": ["https://*"], "headers": { "User-Agent": "Mozilla/5.0" } }
