chore(gitignore): stop tracking validation reports; add broader ignores and placeholder/test policies; add placeholders log; rewrap MCP guide and fix docs lint

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -1,6 +1,7 @@
 {
   "ignorePatterns": [
     { "pattern": "^https://github.com/.+/(compare|commit|pull)/" },
+  { "pattern": "^https://github.com/.+/actions/workflows/.*" },
     { "pattern": "^https://img.shields.io/" },
   { "pattern": "^mailto:" },
   { "pattern": "^vscode://" }
