Refactor code for improved readability and consistency
- Cleaned up whitespace and formatting in scan_reports.py, security_standards.py, standards_integration.py, system_paths.py, and various test files.
- Enhanced error logging messages for clarity in ScanReportManager.
- Updated import statements and organized them for better structure in demo and test files.
- Added a temporary testing file for verifying Black formatter functionality.
- Incremented archive index for new temporary testing files.
- Updated requirements-dev.txt to include pytest-asyncio for asynchronous testing support.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,5 +130,9 @@
   // Pylance performance settings
   "python.analysis.indexing": true,
   "python.analysis.autoSearchPaths": false,
-  "python.defaultInterpreterPath": "./.venv/bin/python"
+  "python.defaultInterpreterPath": "./.venv/bin/python",
+  // Python formatting settings
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  }
 }
