Refactor Markdown Fixing Tool and Update Documentation
- Renamed `fix-Markdown.sh` to `fix-markdown.sh` for consistency.
- Updated README.md to reflect the new script name and usage instructions.
- Consolidated and archived deprecated Markdown fixing scripts.
- Added a centralized version management system in `version_manager.py`.
- Enhanced organization checks in `check-organization.py` and `repository_status.py`.
- Improved documentation organization and archiving in `organize_documentation.py`.
- Introduced a comprehensive Python validation script `check-python.sh`.
- Added `.flake8` configuration for code style enforcement.
- Implemented cspell configuration for spell checking in documentation.
- Updated tests to improve structure and added helper functions.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "lint": "npx markdownlint -c .markdownlint.json **/*.md --ignore node_modules --ignore .markdown-backups --ignore archive",
   "lint:fix": "npx markdownlint -c .markdownlint.json **/*.md --ignore node_modules --ignore .markdown-backups --ignore archive --fix",
   "spell:check": "npx cspell --config cspell.json \"**/*.md\" --no-progress --ignore-path .cspellignore",
-    "spell:check:main": "npx cspell --config cspell.json \"README.md\" \"CONTRIBUTING.md\" \"CHANGELOG.md\"",
+  "spell:check:main": "npx cspell --no-cache --config ./cspell.json README.md CONTRIBUTING.md CHANGELOG.md",
     "quick:validate": "npm run lint && npm run spell:check:main && npm run validate",
+  "validate:python": "bash scripts/tools/quality/check-python.sh",
+  "validate:python:strict": "bash scripts/tools/quality/check-python.sh --strict",
+  "quick:validate:all": "npm run quick:validate && npm run validate:python",
     "playground:test": "node examples/awesome-playground/test/greet.test.js",
     "mcp:triage": "node examples/mcp/github-issues-triage/run.js",
     "mcp:test": "node examples/mcp/github-issues-triage/test/triage.test.js"
