--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,3 +198,29 @@ jobs:
               issue_number: pr_number,
               body: comment
             });
+
+  python-quality:
+    name: Python Quality (format then validate)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Python tooling
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff black flake8 mypy pytest
+
+      - name: Auto-format (ruff + black)
+        run: |
+          ruff format . || true
+          black . || true
+
+      - name: Validate Python (non-destructive checks)
+        run: |
+          bash scripts/tools/quality/check-python.sh || exit 1
