Add version synchronization validation script
This commit introduces a new script, validate-version-sync.sh, which ensures that the version specified in the pyproject.toml file matches the version in the root VERSION file. The script checks for the existence of both files, extracts their version values, and compares them. If a mismatch is found, it provides a clear error message and suggests corrective actions. This helps maintain a single source of truth for versioning in the project.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "lint:fix": "npx markdownlint -c .markdownlint.json **/*.md --ignore node_modules --ignore .markdown-backups --ignore archive --fix",
   "spell:check": "npx cspell --config cspell.json \"**/*.md\" --no-progress --ignore-path .cspellignore",
   "spell:check:main": "npx cspell --no-cache --config ./cspell.json README.md CONTRIBUTING.md CHANGELOG.md",
-    "quick:validate": "npm run lint && npm run spell:check:main && npm run validate",
+  "version:sync:check": "bash scripts/tools/validation/validate-version-sync.sh",
+  "quick:validate": "npm run lint && npm run spell:check:main && npm run version:sync:check && npm run validate",
   "validate:python": "bash scripts/tools/quality/check-python.sh",
   "validate:python:strict": "bash scripts/tools/quality/check-python.sh --strict",
   "quick:validate:all": "npm run quick:validate && npm run validate:python",
