--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,17 +199,48 @@ jobs:
               body: comment
             });
 
-  python-quality:
-    name: Python Quality (format then validate)
+  pre-commit:
+    name: Pre-commit hooks (all files)
     runs-on: ubuntu-latest
+    needs: [validation]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'
+      - name: Install pre-commit
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
+      - name: Run pre-commit on all files
+        run: |
+          pre-commit run --all-files --show-diff-on-failure
+
+  python-quality:
+    name: Python Quality (format then validate)
+    needs: [validation, pre-commit]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.10', '3.11', '3.12' ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+
+      - name: Cache ruff
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ruff
+          key: ${{ runner.os }}-ruff-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
 
       - name: Install Python tooling
         run: |
