feat: Add setup scripts and testing enhancements for development tools
- Implemented a setup script for development tools in `setup.sh`, including Node.js tool installation.
- Created a test script `test_settings_fix.py` to validate text orientation settings behavior.
- Developed a final integration test for RKHunter enhancements in `final_integration_test.py`.
- Added a summary script for RKHunter fixes in `rkhunter_fix_summary.py`.
- Introduced visual demonstration scripts for improved GUI layout and scan enhancements.
- Validated security implementations with `validate_security.py`.
- Archived and organized legacy configurations and test files for better repository structure.
- Added a comprehensive `pyproject.toml` enhancement report detailing configuration modernization.
- Completed repository organization to comply with file organization policies.
- Created an installation script for Arch Linux dependencies in `install-arch-dependencies.sh`.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "github-copilot-enhancement-framework",
-  "version": "1.0.0",
-  "description": "Comprehensive GitHub Copilot enhancement framework with validation systems and VS Code integration",
+  "name": "xanados-search-destroy",
+  "version": "2.11.2",
+  "description": "xanadOS Search & Destroy security scanner with GitHub Copilot enhancement framework for development",
   "main": "scripts/update-readme.js",
   "scripts": {
     "update-readme": "node scripts/update-readme.js",
