--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,27 +42,55 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    # Development dependencies from requirements-dev.txt
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "pytest-mock>=3.10.0",
+    # Core testing framework
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.11.1",
     "pytest-qt>=4.2.0",
-    "black>=23.0.0",
+    "pytest-xvfb>=3.0.0",
+    "pytest-asyncio>=1.1.0",
+    "pytest-xdist>=3.3.0",  # For parallel test execution
+    "pytest-timeout>=2.1.0",  # For test timeouts
+    # Code quality and linting (modern stack)
     "ruff>=0.1.0",
     "mypy>=1.5.0",
-    "pre-commit>=3.0.0",
+    "black>=23.7.0",
+    # Security and dependency scanning
+    "bandit>=1.7.5",
+    "safety>=2.3.0",
+    # Pre-commit and automation
+    "pre-commit>=3.3.0",
+    "tox>=4.6.0",
+    # Build and packaging tools
     "build>=0.10.0",
-    "twine>=4.0.0"
+    "wheel>=0.41.0",
+    "setuptools>=68.0.0",
+    "twine>=4.0.0",
+    # Development utilities
+    "coverage>=7.2.0",
 ]
 docs = [
     "mkdocs>=1.5.0",
     "mkdocs-material>=9.0.0",
-    "mkdocs-mermaid2-plugin>=1.0.0"
+    "mkdocs-mermaid2-plugin>=1.0.0",
+    "sphinx>=7.1.0",
+    "sphinx-rtd-theme>=1.3.0",
+    "sphinx-autodoc-typehints>=1.24.0",
 ]
 packaging = [
     "build>=0.10.0",
     "twine>=4.0.0",
-    "wheel>=0.40.0"
+    "wheel>=0.41.0",
+    "setuptools>=68.0.0",
+]
+debugging = [
+    "ipdb>=0.13.13",
+    "memory-profiler>=0.61.0",
+    "line-profiler>=4.1.0",
+]
+gui-testing = [
+    "pytest-qt>=4.2.0",
+    "pytest-xvfb>=3.0.0",
 ]
 
 [project.urls]
@@ -238,79 +266,272 @@ extend-exclude = '''
 '''
 
 [tool.mypy]
-# Type checking configuration
+# Enhanced type checking configuration
 python_version = "3.11"
-warn_return_any = true
-warn_unused_configs = true
+platform = "linux"
+
+# Import discovery
+mypy_path = ["app", "tests"]
+packages = ["app"]
+namespace_packages = true
+
+# Untyped definitions
+disallow_untyped_calls = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 check_untyped_defs = true
 disallow_untyped_decorators = true
+
+# None and Optional handling
 no_implicit_optional = true
+strict_optional = true
+
+# Configuring warnings
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
+warn_return_any = true
 warn_unreachable = true
+warn_unused_configs = true
+
+# Miscellaneous strictness flags
 strict_equality = true
+strict_concatenate = true
+extra_checks = true
 
-# mypy expects a single regex for excludes in pyproject.toml; use alternation
-# to exclude large, currently-untyped areas to keep strict checks actionable.
-# We'll reintroduce modules incrementally as they gain types.
-exclude = '^(archive/|logs/|dev/|packaging/|scripts/|app/|tests/)'
+# Error output
+show_error_codes = true
+show_column_numbers = true
+show_error_context = true
+color_output = true
+error_summary = true
+pretty = true
 
-# Handle PyQt6 dynamic attributes (from legacy .pylintrc)
+# Incremental mode
+incremental = true
+cache_dir = ".mypy_cache"
+
+# Advanced options
+allow_redefinition = false
+local_partial_types = false
+implicit_reexport = false
+
+# Per-module options
 [[tool.mypy.overrides]]
 module = [
     "PyQt6.*",
+    "psutil.*",
+    "requests.*",
+    "yaml.*",
+    "click.*",
+    "rich.*",
+    "colorama.*",
+    "tabulate.*",
+    "cryptography.*",
 ]
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+    "dev.*",
+    "archive.*",
+]
+ignore_errors = true
+
+# Exclude directories that are currently untyped to keep strict checks actionable
+exclude = '^(archive/|logs/|dev/|packaging/|scripts/)'
+
 [tool.pytest.ini_options]
-# Test configuration
-minversion = "7.0"
+# Comprehensive test configuration
+minversion = "7.4"
 addopts = [
-    "-ra",
+    # Output and reporting
+    "-ra",  # Show extra test summary info for all except passed
     "--strict-markers",
     "--strict-config",
+    "--showlocals",  # Show local variables in tracebacks
+    "--tb=short",  # Shorter traceback format
+
+    # Coverage reporting
     "--cov=app",
     "--cov-report=term-missing",
-    "--cov-report=html",
-    "--cov-report=xml",
-]
-testpaths = ["tests"]
-python_files = ["test_*.py", "*_test.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
-markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
-    "unit: marks tests as unit tests",
-    "gui: marks tests as GUI tests",
+    "--cov-report=html:htmlcov",
+    "--cov-report=xml:coverage.xml",
+    "--cov-branch",  # Include branch coverage
+    "--cov-fail-under=80",  # Fail if coverage below 80%
+
+    # Parallel execution (requires pytest-xdist)
+    "--numprocesses=auto",  # Use all available CPUs
+    "--dist=loadfile",  # Distribute tests by file
+
+    # Warnings and deprecations
+    "--disable-warnings",  # Reduce noise in test output
+    "-p", "no:cacheprovider",  # Disable cache for cleaner runs
+
+    # Performance and debugging
+    "--durations=10",  # Show 10 slowest tests
+    "--maxfail=5",  # Stop after 5 failures
 ]
 
+# Test discovery
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*", "*Tests"]
+python_functions = ["test_*"]
+
+# Test markers for categorization
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "fast: marks tests as fast",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests",
+    "gui: marks tests as GUI tests (require display)",
+    "network: marks tests that require network access",
+    "security: marks security-related tests",
+    "performance: marks performance benchmark tests",
+    "smoke: marks basic smoke tests",
+    "regression: marks regression tests",
+    "flaky: marks potentially flaky tests",
+    "xfail: marks tests expected to fail",
+    "skip: marks tests to skip",
+]
+
+# Filtering and execution
+filterwarnings = [
+    "error",
+    "ignore::UserWarning",
+    "ignore::DeprecationWarning",
+    "ignore::PendingDeprecationWarning",
+    "ignore::ImportWarning",
+    "ignore:.*PyQt6.*:DeprecationWarning",
+]
+
+# Logging configuration
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+
+# Timeout for long-running tests
+timeout = 300  # 5 minutes max per test
+timeout_method = "thread"
+
+# PyQt6 GUI testing
+qt_api = "pyqt6"
+qt_no_exception_capture = false
+
+# Asyncio configuration
+asyncio_mode = "auto"
+
 [tool.coverage.run]
+# Coverage measurement configuration
 source = ["app"]
+branch = true  # Measure branch coverage
+parallel = true  # Support parallel test execution
+context = "pytest"  # Add context for better reporting
+
+# Files to include/exclude
 omit = [
     "*/tests/*",
     "*/test_*",
+    "*/*_test.py",
     "*/dev/*",
     "*/archive/*",
     "*/logs/*",
+    "*/build/*",
+    "*/dist/*",
+    "*/.venv/*",
+    "*/.tox/*",
+    "*/venv/*",
+    "*/site-packages/*",
+    "*/__pycache__/*",
+    "*/conftest.py",
+    "*/setup.py",
 ]
 
+# Dynamic analysis options (disabled for xdist compatibility)
+# dynamic_context = "test_function"  # Disabled due to pytest-xdist conflict
+timid = false
+disable_warnings = ["no-data-collected"]
+
 [tool.coverage.report]
+# Coverage reporting configuration
+precision = 2
+show_missing = true
+skip_covered = false
+skip_empty = false
+sort = "Cover"
+
+# Exclusion patterns for lines not to be covered
 exclude_lines = [
+    # Standard exclusions
     "pragma: no cover",
     "def __repr__",
-    "if self.debug:",
-    "if settings.DEBUG",
+    "def __str__",
     "raise AssertionError",
     "raise NotImplementedError",
-    "if 0:",
     "if __name__ == .__main__.:",
+
+    # Debugging and development
+    "if self.debug:",
+    "if settings.DEBUG",
+    "if DEBUG:",
+
+    # Conditional imports and typing
+    "if TYPE_CHECKING:",
+    "if typing.TYPE_CHECKING:",
+    "except ImportError:",
+
+    # Abstract methods and protocols
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
+    "@abstractmethod",
+
+    # Platform-specific code
+    "if sys.platform",
+    "if platform.system",
+
+    # Error handling that shouldn't be tested
+    "except KeyboardInterrupt:",
+    "except SystemExit:",
+
+    # GUI event handling that's hard to test
+    "def closeEvent",
+    "def paintEvent",
+    "def resizeEvent",
+
+    # Default values in dataclasses
+    "field\\(default_factory=",
 ]
+
+# Partial branch exclusions
+partial_branches = [
+    "pragma: no branch",
+    "if TYPE_CHECKING:",
+    "if typing.TYPE_CHECKING:",
+]
+
+# Minimum coverage thresholds
+fail_under = 80
+
+[tool.coverage.html]
+# HTML report configuration
+directory = "htmlcov"
+title = "xanadOS Search & Destroy - Code Coverage Report"
+show_contexts = true
+skip_covered = false
+skip_empty = false
+
+[tool.coverage.xml]
+# XML report configuration (for CI/CD)
+output = "coverage.xml"
+
+[tool.coverage.json]
+# JSON report configuration
+output = "coverage.json"
+pretty_print = true
+show_contexts = true
 
 [tool.flake8]
 # Align flake8 with Black and repository standards
@@ -341,3 +562,258 @@ per-file-ignores = [
     "app/main.py:E402",
     "tests/test_implementation.py:E402",
 ]
+
+# =============================================================================
+# Additional Modern Tool Configurations
+# =============================================================================
+
+[tool.bandit]
+# Security linting configuration
+targets = ["app"]
+exclude_dirs = ["tests", "dev", "archive", "logs"]
+skips = [
+    "B101",  # Test for use of assert
+    "B603",  # subprocess call - check for execution of untrusted input
+]
+
+[tool.safety]
+# Dependency vulnerability scanning
+ignore = [
+    # Add any known false positives here
+]
+
+[tool.isort]
+# Import sorting (if still needed alongside Ruff)
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip_glob = [
+    "archive/**/*",
+    "logs/**/*",
+    "dev/node/**/*",
+]
+
+[tool.pylint]
+# Enhanced pylint configuration
+[tool.pylint.main]
+load-plugins = [
+    "pylint.extensions.check_elif",
+    "pylint.extensions.bad_builtin",
+    "pylint.extensions.docparams",
+    "pylint.extensions.for_any_all",
+    "pylint.extensions.set_membership",
+    "pylint.extensions.code_style",
+    "pylint.extensions.overlapping_exceptions",
+    "pylint.extensions.typing",
+    "pylint.extensions.redefined_variable_type",
+    "pylint.extensions.comparison_placement",
+]
+
+[tool.pylint.messages_control]
+disable = [
+    "C0103",  # Invalid name (doesn't conform to naming convention)
+    "C0111",  # Missing docstring
+    "R0903",  # Too few public methods
+    "R0913",  # Too many arguments
+    "W0613",  # Unused argument
+    "W0622",  # Redefined builtin
+]
+
+[tool.pylint.format]
+max-line-length = 88
+
+[tool.pylint.design]
+max-args = 8
+max-locals = 20
+max-branches = 15
+max-statements = 60
+
+[tool.tox]
+# Test automation across Python versions
+legacy_tox_ini = """
+[tox]
+envlist = py311,py312,lint,type,security
+isolated_build = true
+
+[testenv]
+deps =
+    pytest>=7.4.0
+    pytest-cov>=4.1.0
+    pytest-qt>=4.2.0
+    pytest-mock>=3.11.1
+commands = pytest {posargs}
+
+[testenv:lint]
+deps =
+    ruff>=0.1.0
+    black>=23.7.0
+commands =
+    ruff check app tests
+    ruff format --check app tests
+    black --check app tests
+
+[testenv:type]
+deps =
+    mypy>=1.5.0
+    types-requests
+    types-PyYAML
+commands = mypy app
+
+[testenv:security]
+deps =
+    bandit>=1.7.5
+    safety>=2.3.0
+commands =
+    bandit -r app
+    safety check
+
+[testenv:docs]
+deps =
+    sphinx>=7.1.0
+    sphinx-rtd-theme>=1.3.0
+commands =
+    sphinx-build -b html docs docs/_build
+"""
+
+[tool.hatch]
+# Modern Python packaging with Hatch
+version.source = "vcs"
+
+[tool.hatch.build]
+exclude = [
+    "/.github",
+    "/docs",
+    "/tests",
+    "/dev",
+    "/archive",
+    "/logs",
+    "*.log",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
+
+[tool.hatch.envs.default]
+dependencies = [
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "pytest-qt>=4.2.0",
+]
+
+[tool.hatch.envs.default.scripts]
+test = "pytest {args:tests}"
+test-cov = "pytest --cov=app --cov-report=term-missing {args:tests}"
+cov-report = "coverage report"
+cov-html = "coverage html"
+
+[tool.hatch.envs.lint]
+detached = true
+dependencies = [
+    "ruff>=0.1.0",
+    "black>=23.7.0",
+    "mypy>=1.5.0",
+]
+
+[tool.hatch.envs.lint.scripts]
+typing = "mypy --install-types --non-interactive {args:app tests}"
+style = [
+    "ruff check {args:.}",
+    "ruff format --check {args:.}",
+    "black --check --diff {args:.}",
+]
+fmt = [
+    "black {args:.}",
+    "ruff format {args:.}",
+    "ruff check --fix {args:.}",
+    "style",
+]
+all = [
+    "style",
+    "typing",
+]
+
+[tool.hatch.envs.security]
+dependencies = [
+    "bandit>=1.7.5",
+    "safety>=2.3.0",
+]
+
+[tool.hatch.envs.security.scripts]
+scan = [
+    "bandit -r app",
+    "safety check",
+]
+
+[tool.semantic_release]
+# Automated versioning and changelog generation
+version_toml = ["pyproject.toml:project.version"]
+branch = "main"
+changelog_file = "CHANGELOG.md"
+build_command = "python -m build"
+dist_path = "dist/"
+remove_dist = false
+
+[tool.semantic_release.changelog]
+template_dir = "templates"
+changelog_file = "CHANGELOG.md"
+
+[tool.semantic_release.branches.main]
+match = "(main|master)"
+prerelease_token = "rc"
+prerelease = false
+
+[tool.semantic_release.commit_parser_options]
+allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore"]
+minor_tags = ["feat"]
+patch_tags = ["fix", "perf"]
+
+[tool.interrogate]
+# Documentation coverage tool
+ignore-init-method = true
+ignore-init-module = false
+ignore-magic = false
+ignore-semiprivate = false
+ignore-private = false
+ignore-property-decorators = false
+ignore-module = false
+ignore-nested-functions = false
+ignore-nested-classes = true
+ignore-setters = false
+fail-under = 80
+exclude = ["archive", "dev", "logs", "tests"]
+ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
+verbose = 0
+quiet = false
+whitelist-regex = []
+color = true
+omit-covered-files = false
+
+[tool.vulture]
+# Dead code detection
+paths = ["app"]
+exclude = ["archive/", "dev/", "logs/", "tests/"]
+ignore_decorators = ["@app.route", "@require_*"]
+ignore_names = ["_*", "test_*"]
+make_whitelist = true
+min_confidence = 60
+sort_by_size = true
+
+[tool.pydocstyle]
+# Docstring style checking
+inherit = false
+convention = "google"
+add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
+match_dir = "app"
+
+[tool.docformatter]
+# Docstring formatting
+wrap-summaries = 72
+wrap-descriptions = 72
+make-summary-multi-line = false
+close-quotes-on-newline = false
+force-wrap = false
+tab-width = 4
