--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,14 @@ dependencies = [
     "click>=8.0.0",
     "rich>=12.0.0",
     "colorama>=0.4.4",
-    "tabulate>=0.9.0"
+    "tabulate>=0.9.0",
+    # Essential runtime dependencies for core functionality
+    "numpy>=1.24.0",             # Required for Unified Security Engine
+    "schedule>=1.2.0",           # Required for scheduled scanning
+    "aiohttp>=3.9.0",            # Required for async operations and web protection
+    "inotify>=0.2.10",           # Required for Linux file system monitoring
+    "dnspython>=2.6.0",          # Required for DNS analysis
+    "python-dotenv>=1.0.0"       # Required for environment configuration
 ]
 
 [project.optional-dependencies]
@@ -62,14 +69,13 @@ malware-analysis = [
 ]
 # Advanced features requiring additional dependencies
 advanced = [
-    "numpy>=1.24.0",             # Numerical computing for advanced analytics
-    "schedule>=1.2.0",           # Job scheduling for automated tasks
-    "aiohttp>=3.9.0",            # Async HTTP client for web protection
     "pandas>=2.1.0",             # Data analysis for reporting
     "matplotlib>=3.7.0",         # Plotting for security reports
     "scikit-learn>=1.3.0",       # Machine learning for heuristic analysis
-    "dnspython>=2.6.0",          # DNS analysis and resolution
-    "inotify>=0.2.10",           # Linux file system monitoring
+    "aiofiles>=24.1.0",          # Async file operations
+    "jinja2>=3.1.0",             # Template engine for reports
+    "markdown>=3.4.0",           # Markdown processing for reports
+    "boto3>=1.35.0",             # AWS cloud integration
 ]
 dev = [
     # Core linting and formatting
