--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "npm run validate",
     "lint": "npx markdownlint -c .markdownlint.json **/*.md --ignore node_modules --ignore .markdown-backups --ignore archive",
     "lint:fix": "npx markdownlint -c .markdownlint.json **/*.md --ignore node_modules --ignore .markdown-backups --ignore archive --fix",
-    "spell:check": "npx cspell --config cspell.json \"**/*.md\" --no-progress --ignore-path .cspellignore",
-    "spell:check:main": "npx cspell --no-cache --config ./cspell.json README.md CONTRIBUTING.md CHANGELOG.md",
+    "spell:check": "npx cspell --config config/cspell.json \"**/*.md\" --no-progress --ignore-path .cspellignore",
+    "spell:check:main": "npx cspell --no-cache --config ./config/cspell.json README.md CONTRIBUTING.md CHANGELOG.md",
     "version:get": "python scripts/tools/version/version_manager.py --get",
     "version:sync": "python scripts/tools/version/version_manager.py --sync",
     "version:sync:check": "bash scripts/tools/validation/validate-version-sync.sh",
