--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
   "recommendations": [
+    "charliermarsh.ruff",
+    "ms-python.python",
+    "ms-python.black-formatter",
     "github.copilot",
     "github.copilot-chat",
     "github.vscode-github-actions",
