--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,28 @@
     "**/node_modules/**": true,
     "**/.venv/**": true,
     "**/.python-env/**": true,
-    "**/venv/**": true
+    "**/venv/**": true,
+    "test_config_fix.py": true,
+    "test_cron_integration.py": true,
+    "test_improved_status.py": true,
+    "test_optimization_direct.py": true,
+    "test_optimization_fixes.py": true,
+    "test_rkhunter_fix.py": true,
+    "test_rkhunter_fixes.py": true,
+    "test_rkhunter_status.py": true,
+    "CRON_INTEGRATION_SUMMARY.md": true,
+    "MODERN_SETUP_SUMMARY.md": true,
+    "RKHUNTER_FIX_SUMMARY.md": true,
+    ".envrc": true,
+    "Makefile.modern": true,
+    "fix_setup_config.py": true,
+    "docs/guides/MODERN_DEVELOPMENT_SETUP.md": true,
+    "releases/v2.13.1.md": true,
+    "scripts/tools/test_firewall_optimization_integration.py": true,
+    "scripts/tools/validate_firewall_detection_fix.py": true,
+    "scripts/tools/version_manager.py": true,
+    "scripts/tools/version_manager_new.py": true,
+    "app/core/elevated_runner_simple.py": true
   },
   "search.exclude": {
     "**/.python-backups/**": true,
@@ -104,10 +125,9 @@
     { "name": "", "depth": 2, "includeAllSymbols": false }
   ],
   "python.analysis.userFileIndexingLimit": 2000,
-  "ruff.lint.args": [
-    "--exclude",
-    ".python-backups,.markdown-backups,archive,node_modules,.venv,venv,.python-env,__pycache__"
-  ],
+  "ruff.configurationPreference": "filesystemFirst",
+  "ruff.importStrategy": "fromEnvironment",
+  "ruff.path": [".venv/bin/ruff"],
   "files.watcherExclude": {
     "**/__pycache__/**": true,
     "**/node_modules/**": true,
@@ -125,5 +145,15 @@
   "python.defaultInterpreterPath": "./.venv/bin/python",
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
-  }
+  },
+  "python.testing.autoTestDiscoverOnSaveEnabled": false,
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": false,
+  "test.testItemSelectionEnabled": false,
+  "testExplorer.showCollapseButton": false,
+  "testExplorer.showExpandButton": false,
+  "workbench.editor.restoreViewState": false,
+  "workbench.editor.enablePreview": false,
+  "workbench.startup.editor": "none",
+  "files.restoreUndoStack": false
 }
