feat: Add comprehensive setup validation and environment health check script
- Introduced `validate-setup.sh` to validate Python, Node.js, Docker, and security tools setup.
- Implemented checks for critical packages, file permissions, and version synchronization.
- Added options for automatic fixes and verbose output.

feat: Implement unified test runner for consistent testing framework

- Created `unified-test-runner.sh` to consolidate various testing types including unit, integration, security, quality, GUI, and Docker tests.
- Enhanced logging and result tracking for better visibility of test outcomes.

fix: Develop comprehensive tools quality fixer

- Added `fix_tools_quality.py` to address 234 code quality issues in the `scripts/tools/` directory.
- Implemented fixes for subprocess security, temporary file security, and unused variable assignments.
- Integrated ruff checks and auto-fixes for remaining issues.

chore: Create scripts for final validation and quick quality fixes

- Developed `fix_warnings.sh` to address remaining validation warnings and ensure 100% success rate.
- Introduced `quick_quality_fixes.sh` for applying quick fixes to Python code quality issues.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "version:get": "python scripts/tools/version/version_manager.py --get",
     "version:sync": "python scripts/tools/version/version_manager.py --sync",
     "version:sync:check": "bash scripts/tools/validation/validate-version-sync.sh",
-    "security:check": "bash scripts/tools/security/security-scan.sh --quick",
+    "security:check": "bash scripts/tools/security/security-scan.sh",
     "security:privilege-check": "python3 scripts/tools/security/privilege-escalation-audit.py --validate-only",
     "structure:check": "bash scripts/tools/validation/validate-structure.sh",
     "prebuild": "npm run version:sync",
